Changes since 4.0.1:

* Fix a bug in 404 handling on some fastcgi servers
* Fix a bug that prevented file_download_list from working properly
* Fix a redirection bug in the comment form
* Fix occasional category URL i18n problems
* Remove extra trailing slash in some breadcrumb links
* Make articles by author work properly
* Make feed_link support section and category correctly
* Add correct content-type to popup comments page
* Fix an obscure feed caching bug
* Fix a possible problem with circular dependencies when loading plugins
* Fix timestamps in Atom feeds
* Fix occasional Atom encoding issues
* UI improvements when creating/copying/deleting styles
* Improve performance of the language loader
* Make date-based permlinks work properly in comment emails
* Better handling of invalid login cookies
* Use page templates for 404 (and other) error pages
* Minor Atom validation improvements
* Improved comment conditionals logic; txp:if_comments now means "if the current article has at least 1 comment"
* Minor performance improvements
* New txp:if_status and txp:page_url tags
* Prevent config.php whitespace from breaking stylesheets
* UI improvements to javascript toggles
* Improved comment input form HTML markup
* Improved txp:section and txp:category tags
* New tags: txp:if_different, txp:if_first_article, txp:if_last_article
* Localize the XML feed link title
* Better encoding of article titles
* Fix rare problems caused by magic_quotes_runtime
* Improved file upload forms
* New language: Latvian
* Support section and category titles in txp:breadcrumb
* Allow decimals=0 in txp:file_download_size tag
* Minor diagnostic info changes
* New labeltag attribute on most list tags
* Restore use_textile preference
* Minor HTML validation fixes
* Developers: new safe_upsert() database function
* Fall back to English if no language data is available
* Support comma-separated names in txp:if_category and txp:if_section